--- a/index.html
+++ b/index.html
@@ -20,9 +20,47 @@
 
 <body>
 
+    <!-- Inicio Navegación Menú -->
+
+    <header id="header">
+        <nav class="menu">
+            <div class="logo-box">
+                <h1><a href="#">Experts Agency</a></h1>
+                <span class="btn-menu"><i class="fa-solid fa-bars"></i></span>
+            </div>
+
+            <div class="list-container">
+                <ul class="lists">
+                    <li><a href="#" class="activo">Inicio</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Img Header -->
+        <div class="img-header">
+            <div class="welcome">
+                <h1>Bienvenidos a Experts Agency</h1>
+                <hr>
+                <p>Agencia de diseño y desarrollo web</p>
+                <button id="abajo">Ver abajo</button>
+            </div>
+        </div>
+
+
+    </header>
+
+
+
+    <!-- Fin Navegación Menú -->
+
 
     <!-- Scripts -->
     <script src="js/app.js"></script>
+
 </body>
 
 </html>
