maquetando sección acerca de nosotros

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <body>
 
     <!-- Inicio Navegación Menú -->
-
     <header id="header">
         <nav class="menu">
             <div class="logo-box">
@@ -50,12 +49,39 @@
             </div>
         </div>
 
-
     </header>
-
-
-
     <!-- Fin Navegación Menú -->
+
+
+    <main>
+
+        <!-- Inicio Acerca de Nosotros -->
+        <section class="acerca-de">
+            <div class="info-container">
+
+                <h1>Acerca de Nosotros</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam adipisci quod omnis
+                    voluptates, vel aliquid ipsa doloribus est numquam reiciendis modi officiis laboriosam quo quam ex
+                    molestias, deserunt praesentium!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sint provident iure ducimus quisquam
+                    officiis velit, sed facere consectetur accusantium expedita rem voluptatum minus laboriosam minima
+                    illo quidem cum pariatur.</p>
+
+                <div class="about-gallery">
+                    <img src="img/img-1.jpg" alt="">
+                    <img src="img/img-2.jpg" alt="">
+                    <img src="img/img-3.jpg" alt="">
+                </div>
+
+                <div class="about-more">
+                    <button>Leer más</button>
+                </div>
+
+            </div>
+        </section>
+        <!-- Fin Acerca de Nosotros -->
+
+    </main>
 
 
     <!-- Scripts -->
