maquetando sección Nuestros Proyectos

--- a/index.html
+++ b/index.html
@@ -81,6 +81,36 @@
         </section>
         <!-- Fin Acerca de Nosotros -->
 
+        <!-- Inicio Nuestros Proyectos -->
+        <section class="our-projects">
+            <div class="deg-background">
+
+            </div>
+
+            <div class="eje2project">
+                <div class="container-project">
+                    <div class="project-title">
+                        <h2>Nuestros Proyectos</h2>
+                        <hr>
+                    </div>
+
+                    <div class="project-img">
+                        <img src="img/theme-1.png" alt="">
+                        <img src="img/theme-2.png" alt="">
+                        <img src="img/theme-3.png" alt="">
+                        <img src="img/theme-4.png" alt="">
+                        <img src="img/theme-5.png" alt="">
+                        <img src="img/theme-6.png" alt="">
+                        <img src="img/theme-7.png" alt="">
+                        <img src="img/theme-8.png" alt="">
+                        <img src="img/theme-9.png" alt="">
+                        <img src="img/theme-10.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Fin Nuestros Proyectos -->
+
     </main>
 
 
