avance sección testimonios

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         </section>
         <!-- Fin Acerca de Nosotros -->
 
+
         <!-- Inicio Nuestros Proyectos -->
         <section class="our-projects">
             <div class="deg-background">
@@ -111,6 +112,23 @@
         </section>
         <!-- Fin Nuestros Proyectos -->
 
+
+        <!-- Inicio Testimonios -->
+        <section class="testimonios">
+            <div class="testimonios-title">
+                <h2>Testimonios</h2>
+                <hr>
+            </div>
+
+            <div class="box-testimonios">
+                <div class="card-testimonio">
+                    <div class="card-img">
+                        <!-- me quede en el min 14:29  -->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Fin Testimonios -->
     </main>
 
 
