terminando secciones de testimonios

--- a/index.html
+++ b/index.html
@@ -123,9 +123,57 @@
             <div class="box-testimonios">
                 <div class="card-testimonio">
                     <div class="card-img">
-                        <!-- me quede en el min 14:29  -->
+                        <div class="card-img"><img src="img/people-1.jpg" alt=""></div>
+                        <div class="testimonio-text">
+                            <h4>Mary Sinclair</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit fuga quibusdam eaque totam
+                                tempora ipsa dolorum? Exercitationem quaerat possimus voluptates officiis ipsa, sapiente
+                                praesentium nulla ipsum corrupti provident nisi debitis ab commodi minima veniam
+                                repellendus consequatur odit omnis at quasi fugiat velit magnam dignissimos. Unde at
+                                quasi officia quibusdam cupiditate.</p>
+                        </div>
                     </div>
                 </div>
+
+                <div class="card-testimonio">
+                    <div class="card-img">
+                        <div class="card-img"><img src="img/people-2.jpg" alt=""></div>
+                        <div class="testimonio-text">
+                            <h4>Mike Gomez</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit fuga quibusdam eaque totam
+                                tempora ipsa dolorum? Exercitationem quaerat possimus voluptates officiis ipsa, sapiente
+                                praesentium nulla ipsum corrupti provident nisi.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-testimonio">
+                    <div class="card-img">
+                        <div class="card-img"><img src="img/people-3.jpg" alt=""></div>
+                        <div class="testimonio-text">
+                            <h4>Paul Sting</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit fuga quibusdam eaque totam
+                                tempora ipsa dolorum? Exercitationem quaerat possimus voluptates officiis ipsa, sapiente
+                                praesentium nulla ipsum corrupti provident nisi debitis ab commodi minima veniam
+                                repellendus consequatur.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-testimonio">
+                    <div class="card-img">
+                        <div class="card-img"><img src="img/people-4.jpg" alt=""></div>
+                        <div class="testimonio-text">
+                            <h4>Laurel Castillo</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit fuga quibusdam eaque totam
+                                tempora ipsa dolorum? Exercitationem quaerat possimus voluptates officiis ipsa, sapiente
+                                praesentium nulla ipsum corrupti provident nisi debitis ab commodi minima veniam
+                                repellendus consequatur odit omnis at quasi fugiat velit magnam dignissimos. Unde at
+                                quasi officia quibusdam cupiditate.</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
         <!-- Fin Testimonios -->
