--- a/index.html
+++ b/index.html
@@ -180,6 +180,36 @@
     </main>
 
 
+    <!-- Inicio Footer -->
+    <footer class="footer">
+        <div class="deg-footer"></div>
+
+        <div class="eje2footer">
+            <div class="footer-content">
+                <div class="footer-title">
+                    <h2>Formulario de Contacto</h2>
+                    <hr>
+                </div>
+
+                <div class="formulario-content">
+                    <form id="formulario">
+                        <label for="user">Nombre:</label>
+                        <input type="text" name="user" id="user" placeholder="Ingresa tu nombre">
+
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email" placeholder="Ingresa tu email">
+
+                        <label for="mensaje">Escribe tu mensaje:</label>
+                        <textarea name="message" id="message"></textarea>
+                        <!-- me quede en el min 19.39 -->
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Fin Footer -->
+
     <!-- Scripts -->
     <script src="js/app.js"></script>
 
