terminando de maquetar el footer

--- a/index.html
+++ b/index.html
@@ -201,9 +201,23 @@
 
                         <label for="mensaje">Escribe tu mensaje:</label>
                         <textarea name="message" id="message"></textarea>
-                        <!-- me quede en el min 19.39 -->
+
+                        <div class="send">
+                            <button>Enviar</button>
+                        </div>
+
+                        <div class="mensaje-form">
+                            <p>Escribenos un mensaje, con mucho gusto tendrás una respuesta de parte de nosotros en muy
+                                poco tiempo.</p>
+                        </div>
+
                     </form>
                 </div>
+
+                <div class="footer-text">
+                    <p>&copy; Rony Taco - 2022 | Todos los derechos reservados</p>
+                </div>
+
             </div>
         </div>
     </footer>
