--- a/index.html
+++ b/index.html
@@ -96,16 +96,12 @@
                     </div>
 
                     <div class="project-img">
-                        <img src="img/theme-1.png" alt="">
-                        <img src="img/theme-2.png" alt="">
-                        <img src="img/theme-3.png" alt="">
-                        <img src="img/theme-4.png" alt="">
-                        <img src="img/theme-5.png" alt="">
-                        <img src="img/theme-6.png" alt="">
-                        <img src="img/theme-7.png" alt="">
-                        <img src="img/theme-8.png" alt="">
-                        <img src="img/theme-9.png" alt="">
-                        <img src="img/theme-10.png" alt="">
+                        <img src="img/project-1.png" alt="">
+                        <img src="img/project-2.png" alt="">
+                        <img src="img/project-3.png" alt="">
+                        <img src="img/project-4.png" alt="">
+                        <img src="img/project-5.png" alt="">
+                        <img src="img/project-6.png" alt="">
                     </div>
                 </div>
             </div>
