dandole ajustes al html del footer y quedando bien estilos footer

--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
 
     <!-- Inicio Footer -->
     <footer class="footer">
-        <div class="deg-footer"></div>
+        <div class="deg-footer">
+
+        </div>
 
         <div class="eje2footer">
             <div class="footer-content">
@@ -209,12 +211,12 @@
 
                     </form>
                 </div>
-
-                <div class="footer-text">
-                    <p>&copy; Rony Taco - 2022 | Todos los derechos reservados</p>
-                </div>
-
             </div>
+
+            <div class="footer-text">
+                <p>&copy; Rony Taco - 2022 | Todos los derechos reservados</p>
+            </div>
+
         </div>
     </footer>
 
