comenzando a trabajar con jquery, insertando código para el menú de navegación

--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
     <!-- Fin Footer -->
 
     <!-- Scripts -->
+
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="js/app.js"></script>
 
 </body>
