agregando html , css y jquery para botón ir arriba

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
 <body>
 
+    <!-- Inicio Ir Arriba -->
+    <div class="go-top">
+        <span class="fas fa-angle-up"></span>
+    </div>
+    <!-- Fin Ir Arriba -->
+
+
     <!-- Inicio Navegación Menú -->
     <header id="header">
         <nav class="menu">
