agregando efecto skew: estilos y despúes agregando en el html

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             </div>
         </div>
 
+        <div class="skew-abajo"></div>
+
     </header>
     <!-- Fin Navegación Menú -->
 
@@ -91,9 +93,10 @@
 
         <!-- Inicio Nuestros Proyectos -->
         <section class="our-projects">
-            <div class="deg-background">
 
-            </div>
+            <div class="skew-arriba"></div>
+
+            <div class="deg-background"></div>
 
             <div class="eje2project">
                 <div class="container-project">
@@ -112,6 +115,9 @@
                     </div>
                 </div>
             </div>
+
+            <div class="skew-abajo"></div>
+
         </section>
         <!-- Fin Nuestros Proyectos -->
 
@@ -185,9 +191,10 @@
 
     <!-- Inicio Footer -->
     <footer class="footer">
-        <div class="deg-footer">
 
-        </div>
+        <div class="skew-arriba"></div>
+
+        <div class="deg-footer"></div>
 
         <div class="eje2footer">
             <div class="footer-content">
